--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "antd": "^5.9.0",
+    "dotenv": "^16.3.1",
     "firebase": "^8.6.8",
     "firebase-admin": "^11.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-firebase-hooks": "^3.0.5"
+    "react-firebase-hooks": "^3.0.5",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
